--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Pizza Luigi</h1>
 <img src="images/luigi.jpg" alt="pizza" class="fullwidth">
-<h2>Goede dag</h2>
+<h2>Goede <span th:text="${boodschap}"></span></h2>
 </body>
 </html>
