--- a/src/main/resources/templates/pizzas.html
+++ b/src/main/resources/templates/pizzas.html
@@ -10,6 +10,7 @@
     <li th:each="pizza:${pizzas}" th:object="${pizza}">
         <span th:text="|*{naam} '&euro;' *{prijs}|"></span>
         <span th:if="*{pikant}"> pikant</span>
+        <a th:href="@{/pizzas/{id}(id=*{id})}">detail</a>
     </li>
 </ul>
 </body>
