--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,7 @@
             <li><a th:href ="@{/}">Welkom</a></li>
             <li><a th:href="@{/pizzas}">Pizza's</a></li>
             <li><a th:href="@{/os}">OS</a></li>
+            <li><a th:href="@{/kleuren}">Kleur</a></li>
         </ul>
     </nav>
 </body>
