--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" th:href="@{/css/luigi.css}">
 </head>
 <body>
-    <nav th:fragment="menu" xmlns:th="http://www.thymeleaf.org">
-        <ul>
-            <li><a th:href ="@{/}">Welkom</a></li>
-            <li><a th:href="@{/pizzas}">Pizza's</a></li>
-            <li><a th:href="@{/os}">OS</a></li>
-            <li><a th:href="@{/kleuren}">Kleur</a></li>
-        </ul>
-    </nav>
+<nav th:fragment="menu" xmlns:th="http://www.thymeleaf.org">
+    <ul>
+        <li><a th:href ="@{/}">Welkom</a></li>
+        <li><a th:href="@{/pizzas}">Pizza's</a></li>
+        <li><a th:href="@{/os}">OS</a></li>
+        <li><a th:href="@{/kleuren}">Kleur</a></li>
+        <li><a th:href="@{/pizzas/prijzen}">Prijzen</a></li>
+    </ul>
+</nav>
 </body>
 </html>
