--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,5 +19,6 @@
     <dt>Adres</dt>
     <dd th:object="${zaakvoerder.adres}" th:text="|*{straat} *{huisNr} *{postcode} *{gemeente}|"></dd>
 </dl>
+<p>Deze pagaina werd <span th:text="${aantalKeerBekeken}"></span> bekeken</p>
 </body>
 </html>
