--- a/src/main/resources/templates/pizza.html
+++ b/src/main/resources/templates/pizza.html
@@ -12,7 +12,9 @@
         <dt>Nummer</dt>
         <dd th:text="*{id}"></dd>
         <dt>Prijs</dt>
-        <dd th:text="*{prijs}"></dd>
+        <dd th:text="|*{prijs} &euro;|"></dd>
+        <dt>In dollar</dt>
+        <dd th:text="|${inDollar} &dollar;|"></dd>
         <dt>Pikant</dt>
         <dd th:text="*{pikant} ? 'Ja' : 'Nee'"></dd>
     </dl>
