--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,5 +20,6 @@
     <dd th:object="${zaakvoerder.adres}" th:text="|*{straat} *{huisNr} *{postcode} *{gemeente}|"></dd>
 </dl>
 <p>Deze pagaina werd <span th:text="${aantalKeerBekeken}"></span> bekeken</p>
+<p th:text="${identificatie.emailAdres}"></p>
 </body>
 </html>
