--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,8 @@
     <dd th:text="*{gehuwd} ? 'Ja' : 'Nee'"></dd>
     <dt>Adres</dt>
     <dd th:object="${zaakvoerder.adres}" th:text="|*{straat} *{huisNr} *{postcode} *{gemeente}|"></dd>
+    <dt>Geboortedatum</dt>
+    <dd th:text="*{{geboorte}}"></dd>
 </dl>
 <p>Deze pagaina werd <span th:text="${aantalKeerBekeken}"></span> bekeken</p>
 <p th:text="${identificatie.emailAdres}"></p>
